--- a/lib/ghpages-template/_config.yml
+++ b/lib/ghpages-template/_config.yml
@@ -28,12 +28,14 @@ sass:
   style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
 
 # site globals
-code_indent: '  ' # 2 space indent
 module_root: /api  # the api collection houses the code modules
 example_root: /examples  # the examples collection houses the code modules
 guide_root: /guides  # the guides collection houses the code modules
+
+## project specific values -----------------
+code_indent: '  ' # 2 space indent
 project:
-  name: 'docs test'
-  repo: 'https://ellemenno.github.io/pages/'
-  owner: ellemenno
-  version: '0.0.0'
+  name: 'lsdoc'
+  repo: 'https://github.com/pixeldroid/lsdoc'
+  owner: pixeldroid
+  version: '1.0.0'
