clarify auto-gen nature of _config.yml; add emoji support

--- a/lib/ghpages-template/ghpages.config
+++ b/lib/ghpages-template/ghpages.config
@@ -1,6 +1,7 @@
 {
   "template_version": "2.0.0",
   "highlighter": "rouge",
+  "plugins": ["jemoji"],
   "permalink": "pretty",
   "collections": {
     "api": {
