--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,13 @@
 ---
-code_indent: "  "
+project:
+  name: lsdoc
+  owner: pixeldroid
+  repo: https://github.com/pixeldroid/lsdoc
+  version: 2.1.0
 collections:
   api:
     output: true
+    ignore-page-order: true
     permalink: "/:collection/:path/"
     title: API
     tab-order: 1
@@ -16,18 +21,13 @@ collections:
     permalink: "/:collection/:path/"
     title: Guides
     tab-order: 3
+code_indent: "  "
 highlighter: rouge
 permalink: pretty
-plugins:
-- jemoji
-project:
-  name: lsdoc
-  owner: pixeldroid
-  repo: https://github.com/pixeldroid/lsdoc
-  version: 2.0.0
 sass:
   style: compressed
-template_version: 0.5.3
-example_root: "/examples"
-guide_root: "/guides"
-module_root: "/api"
+plugins:
+- jemoji
+- jekyll-remote-theme
+remote_theme: pixeldroid/programming-pages
+
